helm/platform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.20.23.75.20.nip.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service-dev
                port:
                  number: 3000

          - path: /core
            pathType: Prefix
            backend:
              service:
                name: core-service-dev
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
